--- a/app/Resources/views/admin/layout.html.twig
+++ b/app/Resources/views/admin/layout.html.twig
@@ -9,6 +9,11 @@
 
 {% block header_navigation_links %}
     <li>
+        <a href="{{ path('admin_report_index') }}">
+            <i class="fa fa-list-alt" aria-hidden="true"></i> {{ 'menu.post_report'|trans }}
+        </a>
+    </li>
+    <li>
         <a href="{{ path('admin_post_index') }}">
             <i class="fa fa-list-alt" aria-hidden="true"></i> {{ 'menu.post_list'|trans }}
         </a>
