--- a/app/Resources/views/admin/report/index.html.twig
+++ b/app/Resources/views/admin/report/index.html.twig
@@ -36,11 +36,11 @@
         <ul class="list-group">
             <li class="list-group-item">
                 <span class="badge" id="num_posts">{{ posts }}</span>
-                Posts
+                {{ 'label.posts_summary'|trans }}
             </li>
             <li class="list-group-item">
                 <span class="badge" id="num_comments">{{ comments }}</span>
-                Comentários
+                {{ 'label.comments_summary'|trans }}
             </li>
         </ul>
 
